saves/test/demo_full_20240802_193545/count1to10/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp count1to10_tb.v count1to10.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
count1to10_tb.v:83: $finish called at 410000 (1ps)

iverilog cmd 2 error:

